# node18_bazel_docker

./: WORKSPACE  package.json
app/: BUILD.bazel  index.js
