load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")

package(default_visibility = ["//visibility:public"])

nodejs_binary(
    name = "myapp",
    data = [],
    entry_point = "index.js",
)

nodejs_image(
    name = "docker",
    binary = "myapp",
    data = ["myapp"],
    entry_point = "index.js",
    include_node_repo_args = False,
    node_repository_name = "nodejs_linux_amd64",
)

nodejs_image(
    name = "dockernew",
    base = "@distroless_debian11//:image",
    binary = "myapp",
    data = ["myapp"],
    entry_point = "index.js",
    include_node_repo_args = False,
    node_repository_name = "nodejs_linux_amd64",
)